--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,15 @@
 
 .container_roulette {
-    position: absolute;
-    left: 14%;
-    transform: scale(0.7);
+    /*position: absolute;
+    left: 14%;*/
+    transform: scale(0.8);
   }
   .roulette {
-    position: absolute;
+    /*position: absolute;*/
     margin: 0 auto;
     width: 300px;
     height: 300px;
-    left: 40%;
+    /*left: 40%;*/
     background-color: gray;
     background-size: 300px 300px;
     background-image: url('http://triviacrackanswers.org/wp-content/uploads/2014/12/rrota.png');
@@ -49,7 +49,12 @@ body{
 }
 
 .justify{
-    position: absolute;
-    top: 18%;
-    left: 10%;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.img_character{
+  transform: scale(1.2);
 }
